# 365dagensuccesvol

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  MULTI_AGENT_ARCHITECTURE.md  PLAN.md  PLAN2.md  README.md  SETUP_ISSUES.md  TESTING_RESULTS.md  check_pb.py  check_schema.py  conversations_schema.json  create_collections.py  create_user.py  fix_collection_permissions.py  import_collections.py  nextjs-frontend-template-plan.md  pb_schema.json  pyproject.toml  railway.json  recreate_collections.py  requirements.txt  test_request.json
docs/work/progress/: 2025-10-14-setup.md  2025-10-15-phase1-complete.md  2025-10-15-phase2-phase3-complete.md  2025-10-15-setup.md
nextjs-frontend-template/: package-lock.json  package.json
nextjs-frontend-template/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend-template/app/api/buddy/match/: route.ts
nextjs-frontend-template/app/api/circle/members/: route.ts
nextjs-frontend-template/app/api/circle/messages/: route.ts
nextjs-frontend-template/app/api/meetups/: route.ts
nextjs-frontend-template/app/api/messages/: route.ts
nextjs-frontend-template/app/api/user/: route.ts
nextjs-frontend-template/app/berichten/: page.tsx
nextjs-frontend-template/app/cirkel/: page.tsx
nextjs-frontend-template/app/onboarding/: page.tsx
nextjs-frontend-template/app/whatsapp/: page.tsx
nextjs-frontend-template/components/: Header.tsx  WarmthWidget.tsx
nextjs-frontend-template/lib/: aiSimulator.ts  ics.ts  mockData.ts  types.ts
pydantic_agents/: __init__.py  server.py
(+28 files in other folders)
